examples/typeError/HidingVarOk.lcp
A = ()
B = ((),())

x : B
x = ((),())

f : A -> A
f x = x
